# TMS_board

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pylintrc  pyproject.toml  requirements.txt  run_bot.py
.github/workflows/: django-ci.yml
board/: celery.py  settings.py  urls.py
chatgpt/: translators.py
settings/nginx/: default.conf
settings/run/: backend.sh  celery-beat.sh  celery.sh
static/css/todolist/: notes.css
templates/: header.html  paginator.html
templates/registration/: login.html
templates/todolist/: comments_form.html  comments_list.html  create_edit_post.html  edit_post.html  home.html  show_post.html  welcome.html
tg_bot/: models.py
tg_bot/db/: connection.py  manager.py
todolist/: admin.py  cb_views.py  filters.py  forms.py  models.py  paginator.py  tg_notifier.py  urls.py  views.py
todolist/api/: filters.py  permisiion.py  serializers.py  urls.py  views.py
todolist/migrations/: 0001_initial.py  0002_post_user.py  0003_comment.py  0004_alter_comment_options_alter_post_options_and_more.py  0005_post_todolist_po_created_037914_idx.py  0006_tag_alter_post_created_post_tags.py  0007_alter_post_options_tag_color.py
todolist/tests/: test_jwt.py
user/: email.py  forms.py  models.py  views.py
user/migrations/: 0002_user_tg_id.py
