[tool.poetry]
name = "board"
version = "0.1.0"
description = ""
authors = ["ig.rudenko <ig.rudenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
psycopg2 = "^2.9.6"
faker = "^18.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
