[tool.poetry]
name = "board"
version = "0.1.0"
description = ""
authors = ["ig.rudenko <ig.rudenko@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
psycopg2-binary = "^2.9.6"
faker = "^18.10.1"
django-ckeditor = "^6.5.1"
django-filter = "^23.2"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
django-simple-captcha = "^0.5.17"
djangorestframework = "^3.14.0"
markdown = "^3.4.3"
requests = "^2.31.0"
django-jazzmin = "^2.6.0"
djoser = "^2.2.0"
djangorestframework-simplejwt = "^5.2.2"
redis = "^4.6.0"
gunicorn = "^20.1.0"
celery = "^5.3.1"
pylint = "^2.17.5"
pylint-django = "^2.5.3"
aiogram = "3.0.0rc1"
sqlalchemy = "^2.0.20"

[tool.poetry.group.test.dependencies]
django-debug-toolbar = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
